fix: Fix the z-index of copy btn

--- a/src/styles/global/copy-btn.scss
+++ b/src/styles/global/copy-btn.scss
@@ -26,7 +26,7 @@ main {
         min-width: 30px;
         transform: translateX(1px);
         border: none;
-        z-index: 100;
+        z-index: 1;
 
         @keyframes fadeInFromNone {
           0% {
